# taskanov

./: README.md  pyproject.toml
src/taskanov/: backend.py  cli.py  config.py  logging_setup.py  notify_os.py  ticker_notifier.py  tui.py
src/taskanov/backends/: __init__.py  base.py  google.py  localjson.py
